[package]
name = "atsams70j21"
description = "Peripheral access API for ATSAMS70J21 microcontrollers (generated using svd2rust)"
version = "0.0.1"
authors = ["Michal Fita <michal.fita@gmail.com>"]
categories = ["embedded", "hardware-support", "pac", "no-std"]
keywords = ["no-std", "arm", "cortex-m", "atsam", "atmel", "microchip", "pac", "ATSAMS70J21"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/michalfita/atsams70-rust"
readme = "README.md"

[dependencies]
bare-metal = "~0.2"
cortex-m = "~0.6"
vcell = "~0.1"

[dependencies.cortex-m-rt]
optional = true
version = "~0.6"

[features]
rt = ["cortex-m-rt/device"]
