[package]
name = "atsams70n21b"
description = "Peripheral access API for ATSAMS70N21B microcontrollers (generated using svd2rust)"
version = "0.0.1"
authors = ["Michal Fita <michal.fita@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m", "atsam", "atmel", "microchip", "ATSAMS70N21B"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/michalfita/atsams70-rust"
readme = "README.md"

[dependencies]
bare-metal = "~0.2"
cortex-m = "~0.6"
vcell = "~0.1"

[dependencies.cortex-m-rt]
optional = true
version = "~0.6"

[features]
rt = ["cortex-m-rt/device"]
