[package]
name = "atsams70q21b"
description = "Peripheral access API for ATSAMS70Q21B microcontrollers from Atmel/Microchip (generated using svd2rust)"
version = "0.0.2"
authors = ["Michal Fita <michal.fita@gmail.com>"]
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["no-std", "arm", "cortex-m", "atsam", "pac"]
license = "0BSD"
repository = "https://github.com/michalfita/atsams70-rust"
readme = "README.md"

[dependencies]
bare-metal = "~0.2"
cortex-m = "~0.6"
vcell = "~0.1"

[dependencies.cortex-m-rt]
optional = true
version = "~0.6"

[features]
rt = ["cortex-m-rt/device"]

[lib]
name = "atsams70q21b"
path = "src/lib.rs"
